--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 # node
 node_modules/
-
-#webpack
 dist/
+dist-ssr
+*.local
 
 # others
-vue-course/
+.DS_Store
